# VoltHurt

./: .gitignore  index.html  package.json  pnpm-lock.yaml
src/: App.css  App.jsx  WelcomeTab.jsx  components.jsx  editor.css  luau.js  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  console.rs  discord.rs  init.rs  injection.rs  lib.rs  main.rs  roblox.rs  scripts.rs  status.rs  updater.rs
src-tauri/src/scripts/: _volthurt_console.lua
