[package]
name = "volthurt"
version = "1.0.0"
description = "SirHurt V5 - Volt Design"
authors = ["xDodox_"]
edition = "2021"

[lib]
name = "volthurt"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2.0.0"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
dirs = "5"
sysinfo = "0.33"
zip = "0.6"
